- Flow conclusion, including IHostedService to run a task that call the FinishElection method; - Inclusion of methods that allow the control of election start/end; - Migrations rebase; - Angular components included.

--- a/LunchVote.Web/ClientApp/src/app/home/home.component.html
+++ b/LunchVote.Web/ClientApp/src/app/home/home.component.html
@@ -1,10 +1,21 @@
-<h2>Quem é você?</h2>
-<br/>
-<form [formGroup]="professionalForm" (ngSubmit)="onSubmit(selectedProfId)">
-  <select formControlName="professionalControl" [(ngModel)]="selectedProfId">
-    <option [value]="professional.id" *ngFor="let professional of professionalList">{{professional.name}}</option>
-  </select>
-  <br />
-  <br />
-  <input type="submit">
-</form>
+<div *ngIf="currElection">
+  <div *ngIf="!currElection.closed">
+    <h2>Quem é você?</h2>
+    <br />
+    <form [formGroup]="professionalForm" (ngSubmit)="onSubmit(selectedProfId)">
+      <select formControlName="professionalControl" [(ngModel)]="selectedProfId">
+        <option [value]="professional.id" *ngFor="let professional of professionalList">{{professional.name}}</option>
+      </select>
+      <br />
+      <br />
+      <input type="submit">
+    </form>
+  </div>
+
+  <div *ngIf="currElection.closed">
+    <h2> Restaurante Vencedor: {{currElection.winnerRestaurantName}}</h2>
+  </div>
+</div>
+<div *ngIf="!currElection">
+  <h2>Carregando...</h2>
+</div>
