--- a/LunchVote.Web/ClientApp/src/app/vote/vote.component.html
+++ b/LunchVote.Web/ClientApp/src/app/vote/vote.component.html
@@ -1,10 +1,15 @@
-<h2>Selecione o restaurante!</h2>
-<br />
-<form [formGroup]="voteForm" (ngSubmit)="onSubmit(selectedRestaurantId)">
-  <select formControlName="restaurantControl" [(ngModel)]="selectedRestaurantId">
-    <option [value]="restaurant.id" *ngFor="let restaurant of restaurantList">{{restaurant.name}}</option>
-  </select>
+<div *ngIf="restaurantList">
+  <h2>Selecione o restaurante!</h2>
   <br />
-  <br />
-  <input type="submit">
-</form>
+  <form [formGroup]="voteForm" (ngSubmit)="onSubmit(selectedRestaurantId)">
+    <select formControlName="restaurantControl" [(ngModel)]="selectedRestaurantId">
+      <option [value]="restaurant.id" *ngFor="let restaurant of restaurantList">{{restaurant.name}}</option>
+    </select>
+    <br />
+    <br />
+    <input type="submit">
+  </form>
+</div>
+<div *ngIf="!restaurantList">
+  <h2>Carregando...</h2>
+</div>
